--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "dexie": "^3.0.3",
+    "gh-pages": "^3.2.3",
     "github-markdown-css": "^4.0.0",
     "jssha": "^3.2.0",
     "markdown-to-jsx": "^7.1.1",
