--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "query-str-sharing-md",
   "version": "0.1.0",
-  "homepage": "https://izumiz-dev.github.io/query-str-sharing-md",
+  "homepage": "https://snipets-md.netlify.app",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -14,7 +14,6 @@
     "@types/react": "^16.9.53",
     "@types/react-dom": "^16.9.8",
     "dexie": "^3.0.3",
-    "gh-pages": "^3.2.3",
     "github-markdown-css": "^4.0.0",
     "jssha": "^3.2.0",
     "markdown-to-jsx": "^7.1.1",
